// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopicSchema should fail validation when fields missing 1`] = `
Object {
  "locale": [ValidatorError: Path \`locale\` is required.],
  "parserVersion": [ValidatorError: Path \`parserVersion\` is required.],
  "path": [ValidatorError: Path \`path\` is required.],
  "repo": [ValidatorError: Path \`repo\` is required.],
  "slug": [ValidatorError: Path \`slug\` is required.],
  "stats.duration": [ValidatorError: Path \`stats.duration\` is required.],
  "stats.durationString": [ValidatorError: Path \`stats.durationString\` is required.],
  "stats.exerciseCount": [ValidatorError: Path \`stats.exerciseCount\` is required.],
  "stats.partCount": [ValidatorError: Path \`stats.partCount\` is required.],
  "stats.unitCount": [ValidatorError: Path \`stats.unitCount\` is required.],
  "syllabus": [ValidatorError: Path \`syllabus\` is required.],
  "title": [ValidatorError: Path \`title\` is required.],
  "track": [ValidatorError: Path \`track\` is required.],
  "version": [ValidatorError: Path \`version\` is required.],
}
`;

exports[`TopicSchema should fail validation when missing part body 1`] = `
Object {
  "syllabus.01-intro.parts.00-opening": "Body is required for part type read",
}
`;

exports[`TopicSchema should fail validation when syllabus is missing 1`] = `
Object {
  "syllabus": [ValidatorError: Path \`syllabus\` is required.],
}
`;
